--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -372,6 +372,8 @@
     <Compile Include="Converters\BoolToImageSourceConverter.cs" />
     <Compile Include="Converters\ChecksumToIdConverter.cs" />
     <Compile Include="Converters\ConnectionClassToImageConverter.cs" />
+    <Compile Include="Converters\EnabledStateToBoolConverter.cs" />
+    <Compile Include="Converters\ItemFormattingConverter.cs" />
     <Compile Include="Converters\PaddSettingToIntegerConverter.cs" />
     <Compile Include="Converters\MapToIntToDescription.cs" />
     <Compile Include="Converters\MapTypeConverter.cs" />
