Finished fixing all data binding errors. Added icons license to about page.

--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -545,6 +545,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Icons\IconExperience.License.txt" />
     <EmbeddedResource Include="app.ico" />
     <CodeAnalysisDictionary Include="CodeAnalaysisDictionary.xml" />
     <EmbeddedResource Include="Resources\Xceed\Xceed.Wpf.Toolkit.License.txt" />
