Fix "Build Action: Resource" resource loading. Fix crash when accessing list from multiple threads.

--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -482,8 +482,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <EmbeddedResource Include="Images\xboxControllerFront.png" />
-    <EmbeddedResource Include="Images\xboxControllerTop.png" />
+    <Resource Include="Images\xboxControllerFront.png" />
+    <Resource Include="Images\xboxControllerTop.png" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
