Adding better support for mapping mice and keyboards. Updates for .NET Core.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -155,7 +155,9 @@
     <Compile Include="Common\ConvertHelper.cs" />
     <Compile Include="Common\CustomDiHelper.cs" />
     <Compile Include="Common\CustomDiState.cs" />
+    <Compile Include="Common\CustomDiState.Masks.cs" />
     <Compile Include="Common\CustomDiUpdate.cs" />
+    <Compile Include="Common\CustomDiUpdate.Ex.cs" />
     <Compile Include="Common\DatabaseHelper.cs" />
     <Compile Include="Common\DeviceEffectItem.cs" />
     <Compile Include="Common\DeviceObjectItem.cs" />
