Shared classes updated.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -226,6 +226,7 @@
       <DependentUpon>Icons.xaml</DependentUpon>
     </Compile>
     <Compile Include="JocysCom\Data\BindableItem.cs" />
+    <Compile Include="JocysCom\Data\SqlHelper.Types.cs" />
     <Compile Include="JocysCom\Diagnostics\RollingWriterOptions.cs" />
     <Compile Include="JocysCom\Processes\KeyboardHelper.cs" />
     <Compile Include="Maps\MapCode.cs" />
