Update and refactor some shared code.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -201,6 +201,8 @@
     <Compile Include="Data\Layout.cs" />
     <Compile Include="Data\UserMacro.cs" />
     <Compile Include="JocysCom\ComponentModel\ObservableCollectionInvoked.cs" />
+    <Compile Include="JocysCom\Configuration\AssemblyInfo.Ext1.cs" />
+    <Compile Include="JocysCom\Controls\ControlsHelper.WPF.UseWindowsForms.cs" />
     <Compile Include="JocysCom\Controls\InfoControl.xaml.cs">
       <DependentUpon>InfoControl.xaml</DependentUpon>
     </Compile>
