--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -441,6 +441,7 @@
     <EmbeddedResource Include="Documents\Help_HidGuardian.rtf" />
     <Compile Include="Common\SettingsManager.LoadAndSync.cs" />
     <EmbeddedResource Include="Documents\Help_ViGEmBus.rtf" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
