Update memory leak tests. Auto-recommend next control to fix.

--- a/x360ce.Net48Test/x360ce.Net48Test.csproj
+++ b/x360ce.Net48Test/x360ce.Net48Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MemoryLeakTest.cs" />
+    <Compile Include="MemTestResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
