Memory leak tests.

--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -397,6 +397,7 @@
     </Compile>
     <Compile Include="Program.AdminCommands.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Program.TestMemoryLeak.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\SettingsMapItem.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
