--- a/x360ce.Net48Test/x360ce.Net48Test.csproj
+++ b/x360ce.Net48Test/x360ce.Net48Test.csproj
@@ -53,6 +53,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomWindow.cs" />
     <Compile Include="MemoryLeakTest.cs" />
     <Compile Include="MemTestResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
