--- a/x360ce.Net60Test/x360ce.Net60Test.csproj
+++ b/x360ce.Net60Test/x360ce.Net60Test.csproj
@@ -1,28 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  <UseWindowsForms>true</UseWindowsForms>
-  <UseWPF>true</UseWPF>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<UseWindowsForms>true</UseWindowsForms>
+		<UseWPF>true</UseWPF>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <Optimize>True</Optimize>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<Optimize>True</Optimize>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
-    <PackageReference Include="coverlet.collector" Version="3.1.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Include="..\x360ce.Net48Test\CustomWindow.cs" Link="CustomWindow.cs" />
+		<Compile Include="..\x360ce.Net48Test\MemoryLeakTest.cs" Link="MemoryLeakTest.cs" />
+		<Compile Include="..\x360ce.Net48Test\MemTestResult.cs" Link="MemTestResult.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\x360ce.App.Beta\x360ce.App.csproj" />
-    <ProjectReference Include="..\x360ce.Engine\x360ce.Engine.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+		<PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
+		<PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
+		<PackageReference Include="coverlet.collector" Version="3.1.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\x360ce.App.Beta\x360ce.App.csproj" />
+		<ProjectReference Include="..\x360ce.Engine\x360ce.Engine.csproj" />
+	</ItemGroup>
 
 </Project>
