Improve speed and completion of memory leak test. Fix two crashes.

--- a/x360ce.Net48Test/x360ce.Net48Test.csproj
+++ b/x360ce.Net48Test/x360ce.Net48Test.csproj
@@ -55,7 +55,7 @@
   <ItemGroup>
     <Compile Include="CustomWindow.cs" />
     <Compile Include="MemoryLeakTest.cs" />
-    <Compile Include="MemTestResult.cs" />
+    <Compile Include="MemoryTestResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
