--- a/x360ce.Net48Test/x360ce.Net48Test.csproj
+++ b/x360ce.Net48Test/x360ce.Net48Test.csproj
@@ -53,9 +53,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MemoryLeakTest.cs" />
+    <Compile Include="Common\JocysComTest.cs" />
+    <Compile Include="Common\SystemControlsTest.cs" />
+    <Compile Include="Common\x360ceEngineTest.cs" />
+    <Compile Include="MemoryLeakHelper.cs" />
     <Compile Include="MemoryTestResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Common\x360ceAppTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -70,6 +74,7 @@
       <Name>x360ce.Engine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
