--- a/x360ce.Net60Test/x360ce.Net60Test.csproj
+++ b/x360ce.Net60Test/x360ce.Net60Test.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<ImplicitUsings>false</ImplicitUsings>
-		<Nullable>enable</Nullable>
+		<Nullable>disable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
 		<IsPackable>false</IsPackable>
@@ -14,19 +14,22 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="..\x360ce.Net48Test\*.cs">
+		<Compile Include="..\x360ce.Net48Test\MemoryLeakHelper.cs">
+			<Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
+		</Compile>
+		<Compile Include="..\x360ce.Net48Test\MemoryTestResult.cs">
 			<Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
 		</Compile>
 		<Compile Include="..\x360ce.Net48Test\Common\*.cs">
 			<Link>Common\%(RecursiveDir)%(Filename)%(Extension)</Link>
 		</Compile>
 	</ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
 		<PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
 		<PackageReference Include="coverlet.collector" Version="3.1.2" />
+		<PackageReference Include="System.Data.Common" Version="4.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
