--- a/x360ce.Net48Test/x360ce.Net48Test.csproj
+++ b/x360ce.Net48Test/x360ce.Net48Test.csproj
@@ -45,11 +45,15 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\AutomationHelper.cs" />
     <Compile Include="Common\JocysComTest.cs" />
     <Compile Include="Common\SystemControlsTest.cs" />
+    <Compile Include="Common\x360ceAppUiTest.cs" />
     <Compile Include="Common\x360ceEngineTest.cs" />
     <Compile Include="MemoryLeakApp.xaml.cs">
       <DependentUpon>MemoryLeakApp.xaml</DependentUpon>
