--- a/x360ce.Engine/App.Config
+++ b/x360ce.Engine/App.Config
@@ -1,19 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<connectionStrings>
-		<add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-		<add name="ResourcesModelContainer" connectionString="metadata=res://*/Resources.Data.ResourcesModel.csdl|res://*/Resources.Data.ResourcesModel.ssdl|res://*/Resources.Data.ResourcesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-		<add name="SecurityEntities" connectionString="metadata=res://*/JocysCom.Security.Data.SecurityModel.csdl|res://*/JocysCom.Security.Data.SecurityModel.ssdl|res://*/JocysCom.Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+		<add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="ResourcesModelContainer" connectionString="metadata=res://*/Resources.Data.ResourcesModel.csdl|res://*/Resources.Data.ResourcesModel.ssdl|res://*/Resources.Data.ResourcesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="SecurityEntities" connectionString="metadata=res://*/JocysCom.Security.Data.SecurityModel.csdl|res://*/JocysCom.Security.Data.SecurityModel.ssdl|res://*/JocysCom.Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
 			<parameters>
-				<parameter value="v12.0"/>
+				<parameter value="v12.0" />
 			</parameters>
 		</defaultConnectionFactory>
 	</entityFramework>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
